--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <a href="#"><img src="assets/img/x.svg" alt="x" /></a>
             </div>
             <div class="custom-container">
-                <div class="name__of__game__block">
+                <div class="name__of__game__block game-img">
                     <h1 class="name__of__game">Морской бой</h1>
                     <div class="info__about__users">
                         <div class="users-online">
@@ -54,6 +54,7 @@
                     <div class="tab-panel__button active">Online</div>
                     <div class="tab-panel__button">Создать</div>
                 </div>
+                
                 <div class="tabs-content">
                     <div class="list-users">
                         <div class="li-user">
