--- a/pages/replenishment-partners.html
+++ b/pages/replenishment-partners.html
@@ -35,7 +35,7 @@
             <div class="custom-container">
                 <div class="header-title">
                     <h1>Пополнение — Через партнеров</h1>
-                    <a href="#"><img src="/assets/img/x.svg" alt="x" /></a>
+                    <a href="#"><img src="../assets/img/x.svg" alt="x" /></a>
                 </div>
             </div>
             <div class="method__replenishment">
