--- a/pages/replenishment.html
+++ b/pages/replenishment.html
@@ -154,7 +154,7 @@
                                 <div class="tab-pane fade show active" id="pills-usd" role="tabpanel" aria-labelledby="pills-usd-tab">
                                     <div class="format-sum__block">
                                         <div class="format-bill">
-                                            <div class="title">Формат счёта?</div>
+                                            <div class="title">Формат счёта</div>
                                             <ul class="nav nav-pills" id="pills-tab" role="tablist">
                                                 <li class="nav-item nav-item-five" id="ustrc20" role="presentation">
                                                     <button
