--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                     </div>
                     <div class="list-users tab-pane fade" id="pills-create" role="tabpanel" aria-labelledby="pills-create-tab">
                         <div class="format-bill">
-                            <div class="title">Ваша ставка CWD</div>
+                            <h4 class="title">Ваша ставка CWD</h4>
                             <ul class="nav nav-pills" id="pills-tab-val" role="tablist">
                                 <li class="nav-item nav-item-five" id="val25" role="presentation">
                                     <button
@@ -123,27 +123,27 @@
                                         aria-controls="pills-val25"
                                         aria-selected="true"
                                     >
-                                        <span class="percent">25</span>
+                                        <span class="percent bold">25</span>
                                     </button>
                                 </li>
                                 <li class="nav-item nav-item-five" id="val50" role="presentation">
                                     <button class="nav-link" id="pills-val50-tab" data-bs-toggle="pill" data-bs-target="#pills-val50" role="tab" aria-controls="pills-val50" aria-selected="true">
-                                        <span class="percent">50</span>
+                                        <span class="percent bold">50</span>
                                     </button>
                                 </li>
                                 <li class="nav-item nav-item-five" id="val75" role="presentation">
                                     <button class="nav-link" id="pills-val75-tab" data-bs-toggle="pill" data-bs-target="#pills-val75" role="tab" aria-controls="pills-val75" aria-selected="true">
-                                        <span class="percent">75</span>
+                                        <span class="percent bold">75</span>
                                     </button>
                                 </li>
                                 <li class="nav-item nav-item-five" id="val100" role="presentation">
                                     <button class="nav-link" id="pills-val100-tab" data-bs-toggle="pill" data-bs-target="#pills-val100" role="tab" aria-controls="pills-val100" aria-selected="true">
-                                        <span class="percent">100</span>
+                                        <span class="percent bold">100</span>
                                     </button>
                                 </li>
                                 <li class="nav-item nav-item-five" id="val200" role="presentation">
                                     <button class="nav-link" id="pills-val200-tab" data-bs-toggle="pill" data-bs-target="#pills-val200" role="tab" aria-controls="pills-val200" aria-selected="true">
-                                        <span class="percent">200</span>
+                                        <span class="percent bold">200</span>
                                     </button>
                                 </li>
                             </ul>
@@ -153,7 +153,7 @@
                             </div>
                         </div>
                         <div class="format-bill">
-                            <div class="title">Тип дуэли</div>
+                            <h4 class="title">Тип дуэли</h4>
                             <ul class="nav nav-pills" id="pills-tab-type-duel" role="tablist">
                                 <li class="nav-item nav-item-two" id="open-duel" role="presentation">
                                     <button
@@ -165,12 +165,12 @@
                                         aria-controls="pills-open-duel"
                                         aria-selected="true"
                                     >
-                                        <span class="percent">Открытая дуэль</span>
+                                        <span class="percent bold">Открытая дуэль</span>
                                     </button>
                                 </li>
                                 <li class="nav-item nav-item-two" id="close-duel" role="presentation">
                                     <button class="nav-link" id="pills-close-duel-tab" data-bs-toggle="pill" data-bs-target="#pills-close-duel" role="tab" aria-controls="pills-close-duel" aria-selected="true">
-                                        <span class="percent">Закрытая дуэль</span>
+                                        <span class="percent bold">Закрытая дуэль</span>
                                     </button>
                                 </li>
                             </ul>
