--- a/pages/replenishment.html
+++ b/pages/replenishment.html
@@ -252,11 +252,9 @@
                     </div>
                     <div class="tab-pane fade custom-container" id="pills-cwd" role="tabpanel" aria-labelledby="pills-cwd-tab">
                         <div class="method__text">
-                            <h2 class="title">Другой способ</h2>
+                            <h3 class="title">Другой способ</h3>
                             <p>
-                                Вы можете выбрать вариант обмена вашей валюты на внутреннюю валюту CWD. <br />
-                                <br />
-                                Этот способ пополнения без процентов. Сроки зачисления CWD на ваш баланс от 20 мин. до 2-х часов.
+                                Здесь будет другой способ оплаты
                             </p>
                         </div>
                     </div>
