--- a/pages/battleship.html
+++ b/pages/battleship.html
@@ -29,7 +29,7 @@
                     <div class="your-field">
                         <div class="table m">
                             <div id="1-row-m" class="custom-row">
-                                <div class="size-ship m">
+                                <div class="size-ship m vw vh vf">
                                     <div class="inner"><div class="cell m o"></div></div>
                                     <div class="inner"><div class="cell m"></div></div>
                                     <div class="inner"><div class="cell m"></div></div>
@@ -43,7 +43,7 @@
                                 </div>
                             </div>
                             <div id="2-row-m" class="custom-row">
-                                <div class="size-ship m">
+                                <div class="size-ship m vw vh vf">
                                     <div class="inner"><div class="cell m d"></div></div>
                                     <div class="inner"><div class="cell m"></div></div>
                                     <div class="inner"><div class="cell m"></div></div>
@@ -57,7 +57,7 @@
                                 </div>
                             </div>
                             <div id="3-row-m" class="custom-row">
-                                <div class="size-ship m">
+                                <div class="size-ship m vw vh vf">
                                     <div class="inner"><div class="cell m"></div></div>
                                     <div class="inner"><div class="cell m d"></div></div>
                                     <div class="inner"><div class="cell m"></div></div>
@@ -71,7 +71,7 @@
                                 </div>
                             </div>
                             <div id="4-row-m" class="custom-row">
-                                <div class="size-ship m">
+                                <div class="size-ship m vw vh vf">
                                     <div class="inner"><div class="cell m"></div></div>
                                     <div class="inner"><div class="cell m"></div></div>
                                     <div class="inner"><div class="cell m d"></div></div>
@@ -85,7 +85,7 @@
                                 </div>
                             </div>
                             <div id="5-row-m" class="custom-row">
-                                <div class="size-ship m">
+                                <div class="size-ship m vw vh vf">
                                     <div class="inner"><div class="cell m"></div></div>
                                     <div class="inner"><div class="cell m"></div></div>
                                     <div class="inner"><div class="cell m"></div></div>
@@ -99,7 +99,7 @@
                                 </div>
                             </div>
                             <div id="6-row-m" class="custom-row">
-                                <div class="size-ship m">
+                                <div class="size-ship m vw vh vf">
                                     <div class="inner"><div class="cell m o"></div></div>
                                     <div class="inner"><div class="cell m o"></div></div>
                                     <div class="inner"><div class="cell m"></div></div>
@@ -113,7 +113,7 @@
                                 </div>
                             </div>
                             <div id="7-row-m" class="custom-row">
-                                <div class="size-ship m">
+                                <div class="size-ship m vw vh vf">
                                     <div class="inner"><div class="cell m d"></div></div>
                                     <div class="inner"><div class="cell m d"></div></div>
                                     <div class="inner"><div class="cell m d"></div></div>
@@ -127,7 +127,7 @@
                                 </div>
                             </div>
                             <div id="8-row-m" class="custom-row">
-                                <div class="size-ship m">
+                                <div class="size-ship m vw vh vf">
                                     <div class="inner"><div class="cell m k"></div></div>
                                     <div class="inner"><div class="cell m k"></div></div>
                                     <div class="inner"><div class="cell m k"></div></div>
@@ -141,7 +141,7 @@
                                 </div>
                             </div>
                             <div id="9-row-m" class="custom-row">
-                                <div class="size-ship m">
+                                <div class="size-ship m vw vh vf">
                                     <div class="inner"><div class="cell m d"></div></div>
                                     <div class="inner"><div class="cell m d"></div></div>
                                     <div class="inner"><div class="cell m d"></div></div>
@@ -155,7 +155,7 @@
                                 </div>
                             </div>
                             <div id="10-row-m" class="custom-row">
-                                <div class="size-ship m">
+                                <div class="size-ship m vw vh vf">
                                     <div class="inner"><div class="cell m"></div></div>
                                     <div class="inner"><div class="cell m"></div></div>
                                     <div class="inner"><div class="cell m"></div></div>
@@ -212,7 +212,7 @@
                     </div>
                     <div class="opponent-field table o">
                         <div id="1-row-o" class="custom-row">
-                            <div class="size-ship">
+                            <div class="size-ship vw vh vf">
                                 <div class="inner"><div class="cell"></div></div>
                                 <div class="inner"><div class="cell k"></div></div>
                                 <div class="inner"><div class="cell d"></div></div>
@@ -226,7 +226,7 @@
                             </div>
                         </div>
                         <div id="2-row-o" class="custom-row">
-                            <div class="size-ship">
+                            <div class="size-ship vw vh vf">
                                 <div class="inner"><div class="cell"></div></div>
                                 <div class="inner"><div class="cell k"></div></div>
                                 <div class="inner"><div class="cell"></div></div>
@@ -240,7 +240,7 @@
                             </div>
                         </div>
                         <div id="3-row-o" class="custom-row">
-                            <div class="size-ship">
+                            <div class="size-ship vw vh vf">
                                 <div class="inner"><div class="cell"></div></div>
                                 <div class="inner"><div class="cell"></div></div>
                                 <div class="inner"><div class="cell"></div></div>
@@ -254,7 +254,7 @@
                             </div>
                         </div>
                         <div id="4-row-o" class="custom-row">
-                            <div class="size-ship">
+                            <div class="size-ship vw vh vf">
                                 <div class="inner"><div class="cell"></div></div>
                                 <div class="inner"><div class="cell"></div></div>
                                 <div class="inner"><div class="cell"></div></div>
@@ -268,7 +268,7 @@
                             </div>
                         </div>
                         <div id="5-row-o" class="custom-row">
-                            <div class="size-ship">
+                            <div class="size-ship vw vh vf">
                                 <div class="inner"><div class="cell"></div></div>
                                 <div class="inner"><div class="cell"></div></div>
                                 <div class="inner"><div class="cell"></div></div>
@@ -282,7 +282,7 @@
                             </div>
                         </div>
                         <div id="6-row-o" class="custom-row">
-                            <div class="size-ship">
+                            <div class="size-ship vw vh vf">
                                 <div class="inner"><div class="cell"></div></div>
                                 <div class="inner"><div class="cell"></div></div>
                                 <div class="inner"><div class="cell"></div></div>
@@ -296,7 +296,7 @@
                             </div>
                         </div>
                         <div id="7-row-o" class="custom-row">
-                            <div class="size-ship">
+                            <div class="size-ship vw vh vf">
                                 <div class="inner"><div class="cell"></div></div>
                                 <div class="inner"><div class="cell"></div></div>
                                 <div class="inner"><div class="cell"></div></div>
@@ -310,7 +310,7 @@
                             </div>
                         </div>
                         <div id="8-row-o" class="custom-row">
-                            <div class="size-ship">
+                            <div class="size-ship vw vh vf">
                                 <div class="inner"><div class="cell"></div></div>
                                 <div class="inner"><div class="cell"></div></div>
                                 <div class="inner"><div class="cell"></div></div>
@@ -324,7 +324,7 @@
                             </div>
                         </div>
                         <div id="9-row-o" class="custom-row">
-                            <div class="size-ship">
+                            <div class="size-ship vw vh vf">
                                 <div class="inner"><div class="cell"></div></div>
                                 <div class="inner"><div class="cell"></div></div>
                                 <div class="inner"><div class="cell"></div></div>
@@ -338,7 +338,7 @@
                             </div>
                         </div>
                         <div id="10-row-o" class="custom-row">
-                            <div class="size-ship">
+                            <div class="size-ship vw vh vf">
                                 <div class="inner"><div class="cell d"></div></div>
                                 <div class="inner"><div class="cell"></div></div>
                                 <div class="inner"><div class="cell d"></div></div>
