--- a/pages/exit-game-popup copy.html
+++ b/pages/exit-game-popup copy.html
@@ -16,7 +16,7 @@
                 <a class="close" href="#"><img src="../assets/img/x.svg" alt="X"></a>
             </div>
             <p>Вы уверены, что хотите покинуть игру? Вам будет засчитан проигрыш.</p>
-            <button class="gray-button"></button>
+            <button class="gray-button">Да, я хочу покинуть игру</button>
         </div>
         <section class="game-block">
             <div id="games-online-view">
@@ -26,12 +26,18 @@
                 </div>
             </div>
             <div id="games-online-field">
-                <header class="balance">
+                <header class="rival">
                     <div class="left-side">
-                        <h4>Ваш баланс</h4>
-                        <div class="user__balance text-black">27 676 CWD</div>
+                        <h4>Соперник</h4>
+                        <div class="rival-info">
+                            <img src="../assets/img/nika.png" alt="nika">
+                            <div class="user__balance text-black">veronika</div>
+                        </div>
+                        
                     </div>
-                    <div class="right-side"><div class="ballance-game">100 CWD</div></div>
+                    <div class="right-side">
+                        <h4>Ставка</h4>
+                        <h3>100 CWD</h3>
                 </header>
                 <section class="playing-field">
                     <div class="your-field">
