--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <div class="router">
-            <a href="/battleship/pages/main-page.html">Main page</a>
+            <a href="./pages/main-page.html">Main page</a>
             <a href="/battleship/pages/battleship.html">Battleship</a>
             <a href="/battleship/pages/exit-game-popup copy.html">Exit popup</a>
             <a href="/battleship/pages/lose-popup.html">Lose popup</a>
