--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <body>
         <div class="router">
             <a href="./pages/main-page.html">Main page</a>
-            <a href="/battleship/pages/battleship.html">Battleship</a>
-            <a href="/battleship/pages/exit-game-popup copy.html">Exit popup</a>
-            <a href="/battleship/pages/lose-popup.html">Lose popup</a>
-            <a href="/battleship/pages/win-popup.html">Win popup</a>
-            <a href="/battleship/pages/menu.html">Menu</a>
-            <a href="/battleship/pages/replenishment.html">Replenishment</a>
+            <a href="./pages/battleship.html">Battleship</a>
+            <a href="./pages/exit-game-popup copy.html">Exit popup</a>
+            <a href="./pages/lose-popup.html">Lose popup</a>
+            <a href="./pages/win-popup.html">Win popup</a>
+            <a href="./pages/menu.html">Menu</a>
+            <a href="./pages/replenishment.html">Replenishment</a>
         </div>
         <script src="node_modules/@popperjs/core/dist/umd/popper.min.js"></script>
         <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
